--- a/.classpath
+++ b/.classpath
@@ -2,17 +2,17 @@
 <classpath>
 	<classpathentry output="target/classes" kind="src" path="src/main/java"/>
 	<classpathentry output="target/test-classes" kind="src" path="src/test/java"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="target/classes"/>
 	<classpathentry kind="output" path="bin"/>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/test/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER" exported="true"/>
-	<classpathentry sourcepath="C:/Users/802661379/.gradle/caches/artifacts-24/filestore/junit/junit/4.11/source/28e0ad201304e4a4abf999ca0570b7cffc352c3c/junit-4.11-sources.jar" kind="lib" path="C:/Users/802661379/.gradle/caches/artifacts-24/filestore/junit/junit/4.11/jar/4e031bb61df09069aeb2bffb4019e7a5034a4ee0/junit-4.11.jar" exported="true"/>
-	<classpathentry sourcepath="C:/Users/802661379/.gradle/caches/artifacts-24/filestore/org.hamcrest/hamcrest-core/1.3/source/1dc37250fbc78e23a65a67fbbaf71d2e9cbc3c0b/hamcrest-core-1.3-sources.jar" kind="lib" path="C:/Users/802661379/.gradle/caches/artifacts-24/filestore/org.hamcrest/hamcrest-core/1.3/jar/42a25dc3219429f0e5d060061f71acb49bf010a0/hamcrest-core-1.3.jar" exported="true"/>
-	<classpathentry sourcepath="C:/Users/802661379/.gradle/caches/artifacts-24/filestore/org.hamcrest/hamcrest-library/1.3/source/47a7ee46628ab7133129cd7cef1e92657bc275e/hamcrest-library-1.3-sources.jar" kind="lib" path="C:/Users/802661379/.gradle/caches/artifacts-24/filestore/org.hamcrest/hamcrest-library/1.3/jar/4785a3c21320980282f9f33d0d1264a69040538f/hamcrest-library-1.3.jar" exported="true"/>
-	<classpathentry sourcepath="C:/Users/802661379/.gradle/caches/artifacts-24/filestore/org.jmock/jmock-junit4/2.6.0/source/918797af2b6c4849b6426be540f6fa42cdd0cb8f/jmock-junit4-2.6.0-sources.jar" kind="lib" path="C:/Users/802661379/.gradle/caches/artifacts-24/filestore/org.jmock/jmock-junit4/2.6.0/jar/6b753c0bdb44e4b5b5e08105f3c785393a092c8b/jmock-junit4-2.6.0.jar" exported="true"/>
-	<classpathentry sourcepath="C:/Users/802661379/.gradle/caches/artifacts-24/filestore/org.jmock/jmock/2.6.0/source/1f7196fb8cc23e8640b25b55e36cf56fe1cc0991/jmock-2.6.0-sources.jar" kind="lib" path="C:/Users/802661379/.gradle/caches/artifacts-24/filestore/org.jmock/jmock/2.6.0/jar/6281feb6afc54ade27dac3574389d2b3f3e33ad5/jmock-2.6.0.jar" exported="true"/>
-	<classpathentry kind="lib" path="C:/Users/802661379/.gradle/caches/artifacts-24/filestore/junit/junit-dep/4.4/jar/a7580ffb722a7fa34e3748e7139bc1db9312542c/junit-dep-4.4.jar" exported="true"/>
+	<classpathentry kind="lib" path="lib/junit-4.11.jar" exported="true"/>
+	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar" exported="true"/>
+	<classpathentry kind="lib" path="lib/hamcrest-library-1.3.jar" exported="true"/>
+	<classpathentry kind="lib" path="lib/jmock-junit4-2.6.0.jar" exported="true"/>
+	<classpathentry kind="lib" path="lib/jmock-2.6.0.jar" exported="true"/>
+	<classpathentry kind="lib" path="lib/junit-dep-4.4.jar" exported="true"/>
 </classpath>
