--- a/.classpath
+++ b/.classpath
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry output="target/classes" kind="src" path="src/main/java"/>
-	<classpathentry output="target/test-classes" kind="src" path="src/test/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="output" path="target/classes"/>
-	<classpathentry kind="output" path="bin"/>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/test/java"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER" exported="true"/>
-	<classpathentry kind="lib" path="lib/junit-4.11.jar" exported="true"/>
-	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar" exported="true"/>
-	<classpathentry kind="lib" path="lib/hamcrest-library-1.3.jar" exported="true"/>
-	<classpathentry kind="lib" path="lib/jmock-junit4-2.6.0.jar" exported="true"/>
-	<classpathentry kind="lib" path="lib/jmock-2.6.0.jar" exported="true"/>
-	<classpathentry kind="lib" path="lib/junit-dep-4.4.jar" exported="true"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="lib" path="lib/junit-4.11.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/hamcrest-core-1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/hamcrest-library-1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jmock-junit4-2.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jmock-2.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/junit-dep-4.4.jar"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
